<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.ac.poliban.mi.e020320058.simplecalc.MainActivity">

    <EditText
        android:id="@+id/operand_one_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_operand_one_hint"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/operand_two_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_operand_two_hint"
        android:inputType="numberDecimal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/operation_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAdd"
            android:text="@string/add_operation_text"/>

        <Button
            android:id="@+id/operation_sub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_toEndOf="@id/operation_add_btn"
            android:layout_toRightOf="@id/operation_add_btn"
            android:onClick="onSub"
            android:text="@string/sub_operation_text" />

        <Button
            android:id="@+id/operation_div_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operation_add_btn"
            android:layout_marginTop="2dp"
            android:onClick="onDiv"
            android:text="@string/div_operation_text" />

        <Button
            android:id="@+id/operation_mul_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operation_add_btn"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/operation_add_btn"
            android:layout_toRightOf="@id/operation_add_btn"
            android:onClick="onMul"
            android:text="@string/mul_operation_text" />

        <Button
            android:id="@+id/operation_mul_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operation_add_btn"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/operation_mul_btn"
            android:layout_toRightOf="@id/operation_mul_btn"
            android:onClick="onMul"
            android:text="@string/pow_operation_text" />

    </RelativeLayout>

    <TextView
        android:id="@+id/operation_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</LinearLayout>